--- a/style.css
+++ b/style.css
@@ -35,3 +35,37 @@ a {
   color: aliceblue;
   text-decoration: none;
 }
+
+input[type="text"],
+select {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  width: 50%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+form {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
