--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 #App {
   background-color: black;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
 }
 body {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav {
@@ -11,7 +13,7 @@ nav {
 }
 
 .nav {
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
   list-style-type: none;
   text-align: center;
   padding: 0;
@@ -25,19 +27,27 @@ nav {
 }
 
 #header {
+  padding-top: 60px;
+  padding-bottom: 120px;
+  /* background-color: rgb(236, 236, 236); */
   margin-left: auto;
   margin-right: auto;
-  display: block;
-  width: 500px;
-  height: 300px;
+  align-content: center;
+  justify-content: center;
+  /* display: block; */
+  width: 950px;
+  height: 450px;
+  transition: margin-left 0.5s;
+  /* padding: 24px; */
 }
 a {
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
 input[type="text"],
 select {
+  /* color: white; */
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -52,7 +62,7 @@ select {
 
 input[type="submit"] {
   width: 50%;
-  background-color: #4caf50;
+  background-color: #01b4fd;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -62,14 +72,28 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #000000;
+  color: white;
 }
 form {
+  color: white;
   margin-left: auto;
   margin-right: auto;
-  display: block;
+  align-content: center;
+  justify-content: center;
+  /* display: inline-block; */
+}
+.form label {
+  display: inline-block;
+  text-align: right;
+  float: left;
 }
 
+.form input {
+  display: inline-block;
+  text-align: left;
+  float: right;
+}
 /* <<<===?>>>> */
 
 .sidenav {
@@ -89,7 +113,7 @@ form {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #7f01fd;
+  color: #01b4fd;
   display: block;
   transition: 0.3s;
 }
@@ -108,7 +132,10 @@ form {
 
 #main {
   transition: margin-left 0.5s;
-  padding: 16px;
+  margin-left: 1px;
+  margin-right: 1px;
+  color: white;
+  /* padding: 16px; */
 }
 
 @media screen and (max-height: 450px) {
@@ -138,17 +165,26 @@ form {
   background-color: white;
 }
 .contianer {
-  background-color: white;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 300px 300px 300px;
-  /* grid-column-gap: 5px; */
-  /* grid-row-gap: 55px; */
-  /* grid-gap: 50px; */
+  grid-template-columns: 380px 380px 380px;
+  grid-template-rows: minmax(200px auto) 400px minmax(300px, auto);
+  grid-auto-rows: minmax(300px, auto);
+  /* grid-gap: 20px; */
+  margin-left: auto;
+  margin-right: auto;
+  align-content: center;
+  justify-content: center;
 }
 #pic {
+  /* padding-left: 12px; */
+  /* display: flex; */
+  /* margin-right: 25px; */
   /* padding: 80px; */
-  width: 250px;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: calc(50% - 4px); */
+  width: 350px;
   height: 320px;
-  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 6px 0px #01b4fd;
 }
