--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav {
 }
 
 #header {
-  padding-top: 60px;
+  /* padding-top: 5px; */
   padding-bottom: 120px;
   /* background-color: rgb(236, 236, 236); */
   margin-left: auto;
@@ -138,7 +138,19 @@ form {
   /* padding: 16px; */
 }
 
-@media screen and (max-height: 450px) {
+@media (min-width: 700px) {
+  .contianer {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 75px;
+    grid-gap: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 600px) {
   .sidenav {
     padding-top: 15px;
   }
@@ -146,11 +158,38 @@ form {
     font-size: 18px;
   }
   #header {
+    /* padding-top: 60px; */
+    padding-bottom: 120px;
+    /* background-color: rgb(236, 236, 236); */
+    left: 50%;
+    margin-left: 10%;
+    align-content: center;
+    justify-content: center;
+    /* display: block; */
+    width: 120%;
+    height: 120%;
+    transition: margin-left 0.5s;
+  }
+  .contianer {
+    /* display: grid; */
+
+    /* grid-template-columns: 380px; */
+    /* grid-template-rows: minmax(200px auto) 400px minmax(300px, auto); */
+    /* grid-auto-rows: minmax(300px, auto); */
+    /* grid-gap: 20px; */
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 75px;
+    box-sizing: border-box;
+    /* display: flex; */
+    /* grid-template-columns: 380px 380px 380px;
+    grid-template-rows: minmax(200px auto) 400px minmax(300px, auto);
+    grid-auto-rows: minmax(300px, auto); */
+    /* grid-gap: 20px;
     margin-left: auto;
     margin-right: auto;
-    display: block;
-    width: 100%;
-    height: 100%;
+    align-content: center;
+    justify-content: center; */
   }
 }
 
@@ -166,9 +205,10 @@ form {
 }
 .contianer {
   display: grid;
-  grid-template-columns: 380px 380px 380px;
-  grid-template-rows: minmax(200px auto) 400px minmax(300px, auto);
-  grid-auto-rows: minmax(300px, auto);
+  grid-template-columns: auto auto auto;
+  /* grid-gap: 75px; */
+  /* grid-template-rows: minmax(200px auto) 400px minmax(300px, auto); */
+  /* grid-auto-rows: minmax(300px, auto); */
   /* grid-gap: 20px; */
   margin-left: auto;
   margin-right: auto;
@@ -176,6 +216,7 @@ form {
   justify-content: center;
 }
 #pic {
+  box-shadow: inset 10px 10px 50px rgb(0, 0, 0);
   /* padding-left: 12px; */
   /* display: flex; */
   /* margin-right: 25px; */
@@ -184,7 +225,22 @@ form {
   margin-left: auto;
   margin-right: auto;
   /* width: calc(50% - 4px); */
-  width: 350px;
-  height: 320px;
-  box-shadow: 2px 2px 6px 0px #01b4fd;
+  width: 220px;
+  height: 250px;
+  box-shadow: 5px 5px 50px #01b4fd;
+}
+#pic1 {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  /* padding-left: 12px; */
+  /* display: flex; */
+  /* margin-right: 25px; */
+  /* padding: 80px; */
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: calc(50% - 4px); */
+  width: 200px;
+  height: 300px;
+  box-shadow: -5px 5px 50px #00b7ff;
 }
